<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Serigrafia">

    <TextView
        android:id="@+id/serigrafia"
        android:layout_width="171dp"
        android:layout_height="48dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="21dp"
        android:text="@string/serigrafia"
        android:textColor="@color/purple_500"
        android:textSize="35dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="181dp"
        android:layout_height="60dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="31dp"
        android:layout_marginRight="31dp"
        app:layout_constraintEnd_toStartOf="@+id/serigrafia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/putologo2" />

    <Button
        android:id="@+id/Calcular"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="700dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/botonredondeado"
        android:text="@string/Calcular"
        app:backgroundTint="#EF6C00"
        app:layout_constraintBottom_toTopOf="@+id/enviar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/borrar"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:background="@drawable/botonredondeado"
        android:text="@string/borrar"
        app:backgroundTint="#EF6C00"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/enviar"
        app:layout_constraintTop_toBottomOf="@+id/Calcular"
        app:layout_constraintVertical_bias="0.01" />

    <Button
        android:id="@+id/volver"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="73dp"
        android:layout_marginRight="73dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/botonredondeado"
        android:text="@string/volver"
        app:backgroundTint="#EF6C00"
        app:layout_constraintBottom_toTopOf="@+id/borrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Calcular"
        app:layout_constraintTop_toTopOf="@+id/Calcular" />

    <TextView
        android:id="@+id/nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginLeft="47dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"

        android:text="@string/nombre"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintEnd_toStartOf="@+id/nombreedit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/producto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginLeft="47dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="67dp"

        android:layout_marginRight="67dp"
        android:text="@string/productos"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintEnd_toStartOf="@+id/productoedit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre" />

    <TextView
        android:id="@+id/cantidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginLeft="47dp"
        android:layout_marginTop="29dp"

        android:layout_marginEnd="67dp"

        android:layout_marginRight="67dp"
        android:text="@string/cantidad"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintEnd_toStartOf="@+id/cantidadedit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/producto" />

    <EditText
        android:id="@+id/nombreedit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/stilo"
        android:ems="10"
        android:inputType="textWebEmailAddress|textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/productoedit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="31dp"
        android:layout_marginRight="31dp"
        android:background="@drawable/stilo"
        android:ems="10"

        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreedit" />

    <EditText
        android:id="@+id/cantidadedit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/stilo"
        android:ems="10"

        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productoedit" />

    <TextView
        android:id="@+id/seccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginLeft="47dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="76dp"
        android:layout_marginRight="76dp"
        android:text="@string/seccion"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintEnd_toStartOf="@+id/seccionspin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cantidad" />

    <Spinner
        android:id="@+id/seccionspin"
        android:layout_width="207dp"
        android:layout_height="37dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/stilo"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cantidadedit" />

    <TextView
        android:id="@+id/color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginLeft="37dp"

        android:layout_marginTop="31dp"
        android:layout_marginEnd="83dp"
        android:layout_marginRight="83dp"
        android:text="@string/color"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintEnd_toStartOf="@+id/spinnercolor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seccion" />

    <TextView
        android:id="@+id/pantalla"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"

        android:layout_marginLeft="36dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="61dp"
        android:layout_marginRight="61dp"
        android:text="@string/pantalla"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintEnd_toStartOf="@+id/spinnerpantalla"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/color" />

    <TextView
        android:id="@+id/Precio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="78dp"
        android:layout_marginRight="78dp"
        android:text="@string/precio"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintEnd_toStartOf="@+id/precioedit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pantalla" />

    <EditText
        android:id="@+id/precioedit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/stilo"

        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerpantalla" />

    <Button
        android:id="@+id/enviar"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="180dp"
        android:background="@drawable/botonredondeado"
        android:text="@string/enviar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Calcular" />

    <Spinner
        android:id="@+id/spinnercolor"
        android:layout_width="207dp"
        android:layout_height="42dp"
        android:layout_marginTop="12dp"

        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/stilo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seccionspin" />

    <Spinner
        android:id="@+id/spinnerpantalla"
        android:layout_width="205dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"

        android:layout_marginEnd="34dp"
        android:layout_marginRight="34dp"
        android:layout_marginBottom="59dp"
        android:background="@drawable/stilo"
        app:layout_constraintBottom_toTopOf="@+id/precioedit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnercolor" />

</androidx.constraintlayout.widget.ConstraintLayout>