<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tampografia">

    <TextView
        android:id="@+id/tampografia"
        android:layout_width="171dp"
        android:layout_height="48dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="21dp"
        android:text="@string/tampografia"
        android:textColor="@color/purple_500"
        android:textSize="35dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="181dp"
        android:layout_height="60dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="31dp"
        android:layout_marginRight="31dp"
        app:layout_constraintEnd_toStartOf="@+id/tampografia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/putologo2" />

    <Button
        android:id="@+id/Calcular2"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="700dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/botonredondeado"
        android:text="@string/Calcular"
        app:backgroundTint="#EF6C00"
        app:layout_constraintBottom_toTopOf="@+id/enviar2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/borrar2"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:background="@drawable/botonredondeado"
        android:text="@string/borrar"
        app:backgroundTint="#EF6C00"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/enviar2"
        app:layout_constraintTop_toBottomOf="@+id/Calcular2"
        app:layout_constraintVertical_bias="0.01" />

    <Button
        android:id="@+id/volver2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="73dp"
        android:layout_marginRight="73dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/botonredondeado"
        android:text="@string/volver"
        app:backgroundTint="#EF6C00"
        app:layout_constraintBottom_toTopOf="@+id/borrar2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Calcular2"
        app:layout_constraintTop_toTopOf="@+id/Calcular2" />

    <TextView
        android:id="@+id/nombre2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginLeft="47dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"

        android:text="@string/nombre"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintEnd_toStartOf="@+id/nombreedit2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/producto2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginLeft="47dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="67dp"

        android:layout_marginRight="67dp"
        android:text="@string/productos"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintEnd_toStartOf="@+id/productoedit2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre2" />

    <TextView
        android:id="@+id/cantidad2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginLeft="47dp"
        android:layout_marginTop="29dp"

        android:layout_marginEnd="67dp"

        android:layout_marginRight="67dp"
        android:text="@string/cantidad"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintEnd_toStartOf="@+id/cantidadedit2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/producto2" />

    <EditText
        android:id="@+id/nombreedit2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/stilo"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <EditText
        android:id="@+id/productoedit2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="31dp"
        android:layout_marginRight="31dp"
        android:background="@drawable/stilo"
        android:ems="10"

        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreedit2" />

    <EditText
        android:id="@+id/cantidadedit2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/stilo"
        android:ems="10"

        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productoedit2" />

    <TextView
        android:id="@+id/seccion2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginLeft="47dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="76dp"
        android:layout_marginRight="76dp"
        android:text="@string/seccion"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintEnd_toStartOf="@+id/seccionspin2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cantidad2" />

    <Spinner
        android:id="@+id/seccionspin2"
        android:layout_width="209dp"
        android:layout_height="37dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/stilo"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cantidadedit2" />

    <TextView
        android:id="@+id/color2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginLeft="37dp"

        android:layout_marginTop="31dp"
        android:layout_marginEnd="83dp"
        android:layout_marginRight="83dp"
        android:text="@string/color"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintEnd_toStartOf="@+id/spinnercolor2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seccion2" />

    <TextView
        android:id="@+id/pantalla2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"

        android:layout_marginLeft="36dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="61dp"
        android:layout_marginRight="61dp"
        android:text="@string/pantalla"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintEnd_toStartOf="@+id/spinnerpantalla2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/color2" />

    <TextView
        android:id="@+id/Precio2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="78dp"
        android:layout_marginRight="78dp"
        android:text="@string/precio"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintEnd_toStartOf="@+id/precioedit2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pantalla2" />

    <EditText
        android:id="@+id/precioedit2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/stilo"

        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerpantalla2" />

    <Button
        android:id="@+id/enviar2"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="180dp"
        android:background="@drawable/botonredondeado"
        android:text="@string/enviar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Calcular2" />

    <Spinner
        android:id="@+id/spinnercolor2"
        android:layout_width="205dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"

        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:background="@drawable/stilo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seccionspin2" />

    <Spinner
        android:id="@+id/spinnerpantalla2"
        android:layout_width="205dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"

        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginBottom="59dp"
        android:background="@drawable/stilo"
        app:layout_constraintBottom_toTopOf="@+id/precioedit2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnercolor2" />

</androidx.constraintlayout.widget.ConstraintLayout>